--- a/PicoRoverWindow/RoverMarker.html
+++ b/PicoRoverWindow/RoverMarker.html
@@ -10,6 +10,23 @@
 <body>
 <div class="contents">
 <canvas id="canvas" width=100% height=100%></canvas>
+<table>
+<tr>
+<th bgcolor="#EE0000" width="600"><font color="#FFFFFF">1st</font></th>
+<th bgcolor="#EE0000" width="600"><font color="#FFFFFF">2nd</font></th>
+<th bgcolor="#EE0000" width="600"><font color="#FFFFFF">3rd</font></th>
+</tr>
+<tr>
+<td  id="1st-S">あ</td>
+<td  id="2nd-S">あ</td>
+<td  id="3rd-S">あ</td>
+</tr>
+<tr>
+<td  id="1st-T">あ</td>
+<td  id="2nd-T">あ</td>
+<td  id="3rd-T">あ</td>
+</tr>
+</table>
 </div>
 <script type="text/javascript" src="mqttws31.js"></script>
 <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
