--- a/PicoRoverWindow/RoverMarker.html
+++ b/PicoRoverWindow/RoverMarker.html
@@ -17,14 +17,14 @@
 <th bgcolor="#EE0000" width="600"><font color="#FFFFFF">3rd</font></th>
 </tr>
 <tr>
-<td  id="1st-S">あ</td>
-<td  id="2nd-S">あ</td>
-<td  id="3rd-S">あ</td>
+<td  id="1st-S">0</td>
+<td  id="2nd-S">0</td>
+<td  id="3rd-S">0</td>
 </tr>
 <tr>
-<td  id="1st-T">あ</td>
-<td  id="2nd-T">あ</td>
-<td  id="3rd-T">あ</td>
+<td  id="1st-T">0Mbps</td>
+<td  id="2nd-T">0Mbps</td>
+<td  id="3rd-T">0Mbps</td>
 </tr>
 </table>
 </div>
