--- a/PicoRoverWindow/RoverMarker.html
+++ b/PicoRoverWindow/RoverMarker.html
@@ -12,9 +12,9 @@
 <canvas id="canvas" width=100% height=100%></canvas>
 <table>
 <tr>
-<th bgcolor="#EE0000" width="600"><font color="#FFFFFF">1st</font></th>
-<th bgcolor="#EE0000" width="600"><font color="#FFFFFF">2nd</font></th>
-<th bgcolor="#EE0000" width="600"><font color="#FFFFFF">3rd</font></th>
+<th bgcolor="#990000" width="600"><font color="#FFFFFF">1st</font></th>
+<th bgcolor="#003399" width="600"><font color="#FFFFFF">2nd</font></th>
+<th bgcolor="#ffcc00" width="600"><font color="#FFFFFF">3rd</font></th>
 </tr>
 <tr>
 <td  id="1st-S">0</td>
@@ -22,9 +22,9 @@
 <td  id="3rd-S">0</td>
 </tr>
 <tr>
-<td  id="1st-T">0Mbps</td>
-<td  id="2nd-T">0Mbps</td>
-<td  id="3rd-T">0Mbps</td>
+<td  id="1st-T">0[Mbps]</td>
+<td  id="2nd-T">0[Mbps]</td>
+<td  id="3rd-T">0[Mbps]</td>
 </tr>
 </table>
 </div>
